[package]
name = "brute-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Zeljko Vranjes <zeljkovranjes@outlook.com>"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
regex = "1"
ipnetwork = "0.20"
