[package]
name = "brute-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Zeljko Vranjes <zeljkovranjes@outlook.com>"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

thiserror = "1"
regex = "1"
ipnetwork = "0.20"

[features]
# Enable when compiling for wasm32 (Cloudflare Workers).
# Switches all async traits to ?Send so futures don't need to implement Send,
# which is required because WASM is single-threaded.
wasm = []
