[package]
name = "brute-worker"
version = "0.1.0"
edition = "2021"
authors = [
    "Zeljko Vranjes <zeljkovranjes@outlook.com>"
]

[lib]
crate-type = ["cdylib"]

# Feature flags
# ─────────────
# default (free tier): D1 for all storage and aggregations, no WebSocket.
# paid: enables Cloudflare Analytics Engine (aggregation queries) and
#       Durable Objects (WebSocket broadcasting). Both require the Workers
#       Paid plan ($5/month). Build with `--features paid` to activate.
[features]
default = []
paid = []

[dependencies]
worker = { version = "0.7.5", features = ["d1"] }
brute-core = { path = "../brute-core", features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sha1 = "0.10"
js-sys = "0.3"
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
opt-level = "s"
